--- a/nengo_bones/templates/test.sh.template
+++ b/nengo_bones/templates/test.sh.template
@@ -23,7 +23,27 @@
 
 {% block after_script %}
     {% if coverage %}
-    exe eval "bash <(curl -s https://codecov.io/bash)"
+    curl -s https://codecov.io/bash > codecov
+    CODECOV_VERSION="$(grep 'VERSION=\".*\"' codecov | cut -d'"' -f2)"
+    VALIDATION_FAILURE=0
+    for i in 1 256 512
+    do
+      IS_DIFF="$(diff <(shasum -a $i codecov) <(curl -s https://raw.githubusercontent.com/codecov/codecov-bash/"$CODECOV_VERSION"/SHA${i}SUM))"
+      if [ -z "${IS_DIFF}" ]; then
+        echo "Sha:" $i "passes validation"
+      else
+        echo "Sha:" $i "fails validation"
+        VALIDATION_FAILURE=1
+      fi
+    done
+    if [ "${VALIDATION_FAILURE}" == 1 ]; then
+      echo "Invalid Checksum Detected From Codecov. Skipping upload."
+      STATUS=1
+    else
+      echo "Starting Codecov"
+      exe chmod +x codecov
+      exe ./codecov
+    fi
     {% else %}
     :
     {% endif %}
